[gd_scene load_steps=33 format=2]

[ext_resource path="res://textures/sound.png" type="Texture" id=1]
[ext_resource path="res://textures/left-start-filled.png" type="Texture" id=2]
[ext_resource path="res://textures/red-button.png" type="Texture" id=3]
[ext_resource path="res://textures/down-left.png" type="Texture" id=4]
[ext_resource path="res://scripts/tutorial/TutRectToClick.gd" type="Script" id=5]
[ext_resource path="res://double-pixel.tres" type="DynamicFont" id=6]
[ext_resource path="res://double-pixel-button.tres" type="DynamicFont" id=7]
[ext_resource path="res://textures/down-start-filled.png" type="Texture" id=8]
[ext_resource path="res://textures/dialog-cloud.png" type="Texture" id=9]
[ext_resource path="res://textures/orange-button.png" type="Texture" id=10]
[ext_resource path="res://scripts/Sound.gd" type="Script" id=11]
[ext_resource path="res://scripts/Timer.gd" type="Script" id=12]
[ext_resource path="res://scripts/MovesText.gd" type="Script" id=13]
[ext_resource path="res://scripts/tutorial/tile.gd" type="Script" id=14]
[ext_resource path="res://scripts/Sprite.gd" type="Script" id=15]
[ext_resource path="res://scripts/button_effect.gd" type="Script" id=16]
[ext_resource path="res://textures/hint.png" type="Texture" id=17]
[ext_resource path="res://textures/stone.png" type="Texture" id=18]
[ext_resource path="res://textures/plumberman.png" type="Texture" id=19]
[ext_resource path="res://double-pixel-dialog.tres" type="DynamicFont" id=20]
[ext_resource path="res://scripts/tutorial/TextScript.gd" type="Script" id=21]
[ext_resource path="res://textures/cover.png" type="Texture" id=22]
[ext_resource path="res://scenes/TutManager.gd" type="Script" id=23]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="GDScript" id=4]
script/source = "extends Panel



# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"

# Called when the node enters the scene tree for the first time.
func _ready():
	$TestText.text = str(get_tree().get_current_scene().get_name())



# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
	

"

[sub_resource type="GDScript" id=5]
script/source = "extends Sprite

# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass

# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 63.886, 63.9349 )

[sub_resource type="Animation" id=8]
resource_name = "idle_plumber"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 66.9221, 67.3261 )

[sub_resource type="Animation" id=7]
resource_name = "setup"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -30, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprite:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 90, -0.25, 0, 0.25, 0, 90, -0.25, 0, 0.25, 0, 90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[node name="Tutorial" type="Node2D"]
script = ExtResource( 23 )

[node name="Timer" type="Timer" parent="."]

[node name="TimerPanel" type="Panel" parent="."]
margin_left = 81.5874
margin_top = 130.394
margin_right = 121.587
margin_bottom = 170.394
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Label" parent="TimerPanel"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 6 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovesPanel" type="Panel" parent="."]
margin_left = 81.5874
margin_top = 88.7937
margin_right = 121.587
margin_bottom = 128.794
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovesText" type="Label" parent="MovesPanel"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 6 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelPanel" type="Panel" parent="."]
margin_left = 861.587
margin_top = 75.7937
margin_right = 1061.59
margin_bottom = 175.794
custom_styles/panel = SubResource( 3 )
script = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestText" type="Label" parent="LevelPanel"]
margin_right = 200.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 6 )
text = "LALA"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="Node2D" parent="."]
position = Vector2( 960, 500 )

[node name="Sprite" type="Sprite" parent="Border"]
position = Vector2( -192, -192 )
texture = ExtResource( 18 )

[node name="Sprite4" type="Sprite" parent="Border"]
position = Vector2( -192, -64 )
texture = ExtResource( 18 )

[node name="Sprite6" type="Sprite" parent="Border"]
position = Vector2( -64.0001, -192 )
texture = ExtResource( 18 )

[node name="Sprite7" type="Sprite" parent="Border"]
position = Vector2( 63.9999, -192 )
texture = ExtResource( 18 )

[node name="Sprite8" type="Sprite" parent="Border"]
position = Vector2( 192, -192 )
texture = ExtResource( 18 )

[node name="Sprite14" type="Sprite" parent="Border"]
position = Vector2( 192, 192 )
texture = ExtResource( 18 )

[node name="Sprite15" type="Sprite" parent="Border"]
position = Vector2( 64, 192 )
texture = ExtResource( 18 )

[node name="Sprite16" type="Sprite" parent="Border"]
position = Vector2( -64, 192 )
texture = ExtResource( 18 )

[node name="Sprite2" type="Sprite" parent="Border"]
position = Vector2( -192, 64 )
texture = ExtResource( 18 )

[node name="Sprite5" type="Sprite" parent="Border"]
position = Vector2( 192, -64 )
texture = ExtResource( 18 )

[node name="Sprite9" type="Sprite" parent="Border"]
position = Vector2( 192, 64 )
texture = ExtResource( 18 )

[node name="Sprite3" type="Sprite" parent="Border"]
position = Vector2( -192, 192 )
texture = ExtResource( 18 )

[node name="Board" type="Area2D" parent="."]
position = Vector2( 960, 500 )

[node name="x0" type="Area2D" parent="Board"]
position = Vector2( -64, -64 )
script = ExtResource( 14 )
pipes = [ 1 ]
cost = 1
clickable = true
my_color = Color( 0.2, 1, 0.211765, 1 )

[node name="texture" type="Sprite" parent="Board/x0"]
texture = ExtResource( 2 )
script = ExtResource( 15 )
cost = 1

[node name="weight" type="Sprite" parent="Board/x0"]
modulate = Color( 1, 1, 1, 0.52549 )
texture = ExtResource( 18 )
script = SubResource( 5 )

[node name="x0col" type="CollisionShape2D" parent="Board/x0"]
shape = SubResource( 6 )

[node name="clicks" type="Label" parent="Board/x0"]
margin_left = -44.0
margin_top = -41.701
margin_right = 45.0
margin_bottom = 43.299
custom_fonts/font = ExtResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x1" type="Area2D" parent="Board"]
position = Vector2( 64, -64 )
script = ExtResource( 14 )
pipes = [ 1 ]
cost = 1
order = 1
my_color = Color( 0.2, 1, 0.211765, 1 )

[node name="texture" type="Sprite" parent="Board/x1"]
texture = ExtResource( 4 )
script = ExtResource( 15 )
pipes = [ 1 ]
cost = 1

[node name="weight" type="Sprite" parent="Board/x1"]
modulate = Color( 1, 1, 1, 0.52549 )
texture = ExtResource( 18 )
script = SubResource( 5 )

[node name="x1col" type="CollisionShape2D" parent="Board/x1"]
shape = SubResource( 6 )

[node name="clicks" type="Label" parent="Board/x1"]
margin_left = -44.373
margin_top = -41.701
margin_right = 44.627
margin_bottom = 43.299
custom_fonts/font = ExtResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x2" type="Area2D" parent="Board"]
position = Vector2( -64, 64 )
script = ExtResource( 14 )
order = 2

[node name="texture" type="Sprite" parent="Board/x2"]
script = ExtResource( 15 )
pipes = [ 1 ]
cost = 1

[node name="weight" type="Sprite" parent="Board/x2"]
modulate = Color( 1, 1, 1, 0.52549 )
texture = ExtResource( 18 )
script = SubResource( 5 )

[node name="x0col" type="CollisionShape2D" parent="Board/x2"]
shape = SubResource( 6 )

[node name="clicks" type="Label" parent="Board/x2"]
margin_left = -44.049
margin_top = -41.998
margin_right = 44.951
margin_bottom = 43.002
custom_fonts/font = ExtResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x3" type="Area2D" parent="Board"]
position = Vector2( 64, 64 )
script = ExtResource( 14 )
pipes = [ 1 ]
cost = 1
order = 3
my_color = Color( 0.2, 1, 0.211765, 1 )

[node name="texture" type="Sprite" parent="Board/x3"]
texture = ExtResource( 8 )
script = ExtResource( 15 )
pipes = [ 1 ]
cost = 1

[node name="weight" type="Sprite" parent="Board/x3"]
modulate = Color( 1, 1, 1, 0.52549 )
texture = ExtResource( 18 )
script = SubResource( 5 )

[node name="x1col" type="CollisionShape2D" parent="Board/x3"]
shape = SubResource( 6 )

[node name="clicks" type="Label" parent="Board/x3"]
margin_left = -44.373
margin_top = -41.998
margin_right = 44.627
margin_bottom = 43.002
custom_fonts/font = ExtResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Button" parent="."]
margin_left = 1861.41
margin_top = 31.6621
margin_right = 1909.41
margin_bottom = 76.6621
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Sound"]
position = Vector2( 23.3828, 21.197 )
scale = Vector2( 0.0253536, 0.0288003 )
texture = ExtResource( 1 )

[node name="Submit" type="TextureButton" parent="."]
margin_left = 801.587
margin_top = 870.794
margin_right = 1013.59
margin_bottom = 948.794
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 10 )
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Submit"]
margin_left = 59.9999
margin_top = 19.5146
margin_right = 152.0
margin_bottom = 58.5146
custom_fonts/font = ExtResource( 7 )
text = "SUBMIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hints" type="TextureButton" parent="."]
margin_left = 1626.81
margin_top = 21.6621
margin_right = 1838.81
margin_bottom = 99.6621
texture_normal = ExtResource( 3 )
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Hints"]
margin_left = 48.9592
margin_top = 20.5789
margin_right = 123.959
margin_bottom = 59.5789
custom_fonts/font = ExtResource( 7 )
text = "HINTS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cover" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.694118 )
position = Vector2( 940.663, 550.603 )
scale = Vector2( 63.2104, 35.4127 )
texture = ExtResource( 22 )

[node name="Plumber" type="Node2D" parent="."]
position = Vector2( 198.704, 690.96 )

[node name="Sprite2" type="Sprite" parent="Plumber"]
position = Vector2( -77.1171, -0.166016 )
texture = ExtResource( 19 )
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Plumber/Sprite2"]
autoplay = "idle_plumber"
anims/idle_plumber = SubResource( 8 )

[node name="DialogCloud" type="Sprite" parent="."]
position = Vector2( 329.804, 414.093 )
texture = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="DialogCloud"]
margin_left = -226.0
margin_top = -95.299
margin_right = 224.0
margin_bottom = 84.701
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="DialogCloud/VBoxContainer"]
margin_top = 70.0
margin_right = 450.0
margin_bottom = 109.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 20 )
custom_colors/default_color = Color( 0.85098, 0.517647, 0.211765, 1 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="DialogCloud"]
wait_time = 0.05
autostart = true

[node name="ClickRect" type="Area2D" parent="."]
position = Vector2( 896, 436 )
script = ExtResource( 5 )

[node name="CollShape" type="CollisionShape2D" parent="ClickRect"]
position = Vector2( 0, -3.05176e-05 )
shape = SubResource( 9 )

[node name="HintNode" type="Node2D" parent="."]
visible = false
position = Vector2( 960, 500 )

[node name="Position2D" type="Position2D" parent="HintNode"]
position = Vector2( -30, 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HintNode/Position2D"]
anims/setup = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="HintNode/Position2D"]
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 17 )
[connection signal="timeout" from="Timer" to="TimerPanel/Timer" method="_on_Timer_timeout"]
[connection signal="mouse_entered" from="Board/x0" to="Board/x0" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Board/x0" to="Board/x0" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Board/x1" to="Board/x1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Board/x1" to="Board/x1" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Board/x2" to="Board/x2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Board/x2" to="Board/x2" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Board/x3" to="Board/x3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Board/x3" to="Board/x3" method="_on_mouse_exited"]
[connection signal="pressed" from="Sound" to="Sound" method="_on_Sound_pressed"]
[connection signal="mouse_entered" from="Submit" to="Submit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Submit" to="Submit" method="_on_mouse_exited"]
[connection signal="pressed" from="Submit" to="Board" method="_submit"]
[connection signal="mouse_entered" from="Hints" to="Hints" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Hints" to="Hints" method="_on_mouse_exited"]
[connection signal="pressed" from="Hints" to="Board" method="_on_Hints_pressed"]
[connection signal="timeout" from="DialogCloud/Timer" to="DialogCloud/VBoxContainer/RichTextLabel" method="_on_Timer_timeout"]
[connection signal="mouse_entered" from="ClickRect" to="ClickRect" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ClickRect" to="ClickRect" method="_on_mouse_exited"]
